@@ -4,6 +4,7 @@ import com.quetoquenana.userservice.dto.TokenResponse;
 import com.quetoquenana.userservice.exception.AuthenticationException;
 import com.quetoquenana.userservice.model.User;
 import com.quetoquenana.userservice.model.UserStatus;
+import com.quetoquenana.userservice.repository.RefreshTokenRepository;
 import com.quetoquenana.userservice.service.impl.TokenServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -21,11 +22,7 @@ import org.springframework.security.oauth2.jwt.JwtEncoderParameters;
 import org.springframework.security.oauth2.jwt.JwtClaimsSet;
 
 import java.time.Instant;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.Collection;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
@@ -48,7 +45,9 @@ class TokenServiceImplTest {
         // default: no active applications
         when(applicationService.findActive()).thenReturn(List.of());
 
-        tokenService = new TokenServiceImpl(applicationService, userService, userDetailsService, jwtEncoder, jwtDecoder, 3600L, 86400L, "https://auth.example", "");
+        RefreshTokenRepository refreshTokenRepository = Mockito.mock(com.quetoquenana.userservice.repository.RefreshTokenRepository.class);
+
+        tokenService = new TokenServiceImpl(applicationService, userService, userDetailsService, jwtEncoder, jwtDecoder, refreshTokenRepository, 3600L, 86400L, "https://auth.example", "");
     }
 
     private Jwt buildJwt(Map<String, Object> claims, List<String> aud) {
@@ -113,6 +112,7 @@ class TokenServiceImplTest {
         when(jwtDecoder.decode(ArgumentMatchers.anyString())).thenReturn(jwt);
 
         User user = new User();
+        user.setId(UUID.randomUUID());
         user.setUsername("user");
         user.setUserStatus(UserStatus.ACTIVE);
         when(userService.findByUsername("user")).thenReturn(Optional.of(user));
@@ -120,7 +120,6 @@ class TokenServiceImplTest {
         UserDetails ud = new org.springframework.security.core.userdetails.User("user", "pass", Set.of(new SimpleGrantedAuthority("ROLE_USER")));
         when(userDetailsService.loadUserByUsername("user")).thenReturn(ud);
 
-        // mock encoder to return something predictable (ensure headers are present)
         when(jwtEncoder.encode(ArgumentMatchers.any())).thenReturn(org.springframework.security.oauth2.jwt.Jwt.withTokenValue("t").header("alg","none").header("typ","JWT").claim("x","y").build());
 
         TokenResponse resp = tokenService.refresh("dummy");
@@ -163,6 +162,7 @@ class TokenServiceImplTest {
         when(auth.getAuthorities()).thenReturn((Collection) Set.of(new SimpleGrantedAuthority("ROLE_ADMIN"), new SimpleGrantedAuthority("USER")));
 
         User user = new User();
+        user.setId(UUID.randomUUID());
         user.setUsername("user");
         user.setUserStatus(UserStatus.ACTIVE);
         when(userService.findByUsername("user")).thenReturn(Optional.of(user));
@@ -174,11 +174,11 @@ class TokenServiceImplTest {
         tokenService.createTokens(auth);
 
         // The first encode call is for access token; get captured claims
-        JwtEncoderParameters params = captor.getAllValues().get(0);
+        JwtEncoderParameters params = captor.getAllValues().getFirst();
         JwtClaimsSet claims = params.getClaims();
         Object rolesObj = claims.getClaim("roles");
         assertNotNull(rolesObj);
-        assertTrue(rolesObj instanceof List);
+        assertInstanceOf(List.class, rolesObj);
         List<?> roles = (List<?>) rolesObj;
         assertTrue(roles.contains("ADMIN"));
         assertTrue(roles.contains("USER"));
